--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "node-sass": "^4.13.0",
     "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^6.0.7",
+    "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
